add user service function

--- a/Membership.BackendApi/appsettings.json
+++ b/Membership.BackendApi/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MembershipDb": "Server=.;Database=Membership;Trusted_Connection=True;"
-    //"MembershipDb": "Server=.\\SQLEXPRESS;Database=Membership;user id=sa; password=123;"
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://trannguyenhoangtien.com"
   }
 }
 
