--- a/Membership.Application/Membership.Service.csproj
+++ b/Membership.Application/Membership.Service.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Membership.Data\Membership.Data.csproj" />
+    <ProjectReference Include="..\Membership.ViewModel\Membership.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
