--- a/Membership.BackendApi/appsettings.Development.json
+++ b/Membership.BackendApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MembershipDb": "Server=.;Database=Membership;Trusted_Connection=True;"
+    //"MembershipDb": "Server=.\\SQLEXPRESS;Database=MembershipDb;user id=sa; password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
